--- a/.tmux/macosTmux/.tmux.conf
+++ b/.tmux/macosTmux/.tmux.conf
@@ -19,10 +19,21 @@ unbind-key 1
 unbind-key 2
 unbind-key 3
 unbind-key 4
+unbind-key 5
+unbind-key 6
+unbind-key 7
+unbind-key 8
+unbind-key 9
+bind 1 select-pane -t:.0
 bind 1 select-pane -t:.1
 bind 2 select-pane -t:.2
 bind 3 select-pane -t:.3
 bind 4 select-pane -t:.4
+bind 1 select-pane -t:.5
+bind 2 select-pane -t:.6
+bind 3 select-pane -t:.7
+bind 4 select-pane -t:.8
+bind 4 select-pane -t:.9
 
 
 
