--- a/.tmux/macosTmux/.tmux.conf
+++ b/.tmux/macosTmux/.tmux.conf
@@ -57,7 +57,7 @@ unbind C-g
 bind C-g send-prefix
 
 
-set -g history-limit 5000                 # boost history
+set -g history-limit 999999999                 # boost history
 
 # edit configuration
 bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
