--- a/.tmux/macosTmux/.tmux.conf
+++ b/.tmux/macosTmux/.tmux.conf
@@ -1,4 +1,3 @@
-
 # cat << ►_◄ > /dev/null
 # (‑●‑●)> released under the WTFPL v2 license, by Gregory Pakosz (@gpakosz)
 # 
@@ -6,8 +5,12 @@
 # macOS:
 set -g default-shell $SHELL 
 # see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
+#set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
+bind '"' split-window -v
+bind % split-window -h
+bind - split-window -v
+bind _ split-window -h
 
 set-window-option -g mode-keys vi #可以设置为vi或emacs
 #下面两行关于utf8不再需要
@@ -152,10 +155,10 @@ bind -T choice-mode-vi Escape send-keys -X cancel
 
 # the following vi-copy bindings match my vim settings
 #   see https://github.com/gpakosz/.vim.git
-bind -cT edit-mode-vi H send-keys -X start-of-line
-bind -cT edit-mode-vi L send-keys -X end-of-line
-bind -cT edit-mode-vi q send-keys -X cancel
-bind -cT edit-mode-vi Escape send-keys -X cancel
+bind -T edit-mode-vi H send-keys -X start-of-line
+bind -T edit-mode-vi L send-keys -X end-of-line
+bind -T edit-mode-vi q send-keys -X cancel
+bind -T edit-mode-vi Escape send-keys -X cancel
 
 
 # -- copy mode -----------------------------------------------------------------
