--- a/.tmux/macosTmux/.tmux.conf
+++ b/.tmux/macosTmux/.tmux.conf
@@ -31,6 +31,11 @@ setw -q -g utf8 on
 
 set -g history-limit 5000                 # boost history
 
+set-option -g mode-keys vi
+
+#contrl+q触发全屏或恢复
+bind-key -n C-q resize-pane -Z
+
 # edit configuration
 %if #{>=:#{version},3.0}
 bind e new-window -n "#{TMUX_CONF_LOCAL}" -e EDITOR="$EDITOR" sh -c 'case "${EDITOR:-vim}" in *vim*) ${EDITOR:-vim} -c ":set syntax=tmux" "$TMUX_CONF_LOCAL";; *) $EDITOR "$TMUX_CONF_LOCAL";; esac && "$TMUX_PROGRAM" ${TMUX_SOCKET:+-S "$TMUX_SOCKET"} source "$TMUX_CONF" \; display "$TMUX_CONF_LOCAL sourced"'
@@ -118,6 +123,10 @@ bind F run "cut -c3- '#{TMUX_CONF}' | sh -s _fpp '#{pane_id}' '#{pane_current_pa
 # -- copy mode -----------------------------------------------------------------
 
 bind Enter copy-mode # enter copy mode
+
+#bind -T copy-mode C-u send-keys -X halfpage-up
+#bind -T copy-mode C-d send-keys -X halfpage-down
+
 
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi C-v send -X rectangle-toggle
