--- a/.tmux/ubuntuTmux/.tmux.conf
+++ b/.tmux/ubuntuTmux/.tmux.conf
@@ -56,6 +56,11 @@ bind C-g send-prefix
 
 set -g history-limit 999999999                 # boost history
 
+
+#contrl+q触发全屏或恢复
+bind-key -n C-q resize-pane -Z
+
+
 # edit configuration
 bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
