--- a/.tmux/macosTmux/.tmux.conf
+++ b/.tmux/macosTmux/.tmux.conf
@@ -34,7 +34,11 @@ set -g history-limit 5000                 # boost history
 set-option -g mode-keys vi
 
 #contrl+q触发全屏或恢复
+unbind -n C-q
+unbind C-q
 bind-key -n C-q resize-pane -Z
+bind -T copy-mode-vi C-q send-keys -X cancel \; resize-pane -Z
+
 
 # edit configuration
 %if #{>=:#{version},3.0}
