--- a/.tmux/ubuntuTmux/.tmux.conf
+++ b/.tmux/ubuntuTmux/.tmux.conf
@@ -58,7 +58,11 @@ set -g history-limit 999999999                 # boost history
 
 
 #contrl+q触发全屏或恢复
+unbind -n C-q
+unbind C-q
 bind-key -n C-q resize-pane -Z
+bind -T copy-mode-vi C-q send-keys -X cancel \; resize-pane -Z
+
 
 
 # edit configuration
