--- a/.tmux/macosTmux/.tmux.conf
+++ b/.tmux/macosTmux/.tmux.conf
@@ -34,10 +34,8 @@ set -g history-limit 5000                 # boost history
 set-option -g mode-keys vi
 
 #contrl+q触发全屏或恢复
-unbind -n C-q
-unbind C-q
-bind-key -n C-q resize-pane -Z
-bind -T copy-mode-vi C-q send-keys -X cancel \; resize-pane -Z
+bind -n C-q run "cut -c3- '#{TMUX_CONF}' | sh -s _maximize_pane '#{session_name}' '#D'"
+
 
 
 # edit configuration
